--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.7.0",
@@ -19,7 +19,9 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
+    "sass": "^1.49.11",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
