--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "formik": "^2.2.9",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
@@ -19,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.29.0",
+    "react-i18next": "^11.16.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
