--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-text-transition": "^1.3.0",
+    "react-timer-hook": "^3.0.5",
     "react-toastify": "^8.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.49.11",
