--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.7.0",
