--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
