--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "modern-normalize": "^1.1.0",
+    "netlify-cli": "^9.16.6",
     "notiflix": "^3.2.5",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
@@ -41,7 +42,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p",
+    "logout": "netlify logout",
+    "login": "netlify login",
+    "netlify": "netlify"
   },
   "eslintConfig": {
     "extends": [
